flexitimer (0.1.5) unstable; urgency=low

  *

 -- Francesco Balestrieri <bale@balenet.com>  Wed, 07 Mar 2012 10:00:17 +0200


flexitimer (0.1.4) unstable; urgency=low

  * Reports can be filtered by project
  * Projects can be renamed

 -- Francesco Balestrieri <bale@balenet.com>  Wed, 07 Mar 2012 10:00:17 +0200


flexitimer (0.1.3) unstable; urgency=low

  * Reports can be shared

 -- Francesco Balestrieri <bale@balenet.com>  Sat, 18 Feb 2012 10:00:17 +0200


flexitimer (0.1.2) unstable; urgency=low

  * Projects sorted by most recently updated
  * UI tweaks
  * Bug fixes
  * Note: DB recreation needed

 -- Francesco Balestrieri <bale@balenet.com>  Tue, 14 Feb 2012 10:00:17 +0200

flexitimer (0.1.1) unstable; urgency=low

  * Some UI improvements

 -- Francesco Balestrieri <bale@balenet.com>  Fri, 10 Feb 2012 10:00:17 +0200


flexitimer (0.1.0) unstable; urgency=low

  * First Beta

 -- Francesco Balestrieri <bale@balenet.com>  Wed, 08 Feb 2012 10:00:17 +0200