@@ -98,47 +98,6 @@ CommonPage {
                 mainPage.update()
             }
         }
-
-        /*
-        Button {
-            id: startButton
-            style: PositiveButtonStyle {}
-            text: qsTr("Start")
-            width: Const.mediumButtonWidth
-            visible: project !== inProgress
-
-            anchors.centerIn: parent
-
-            onClicked: {
-                var recordId = appWindow.startProject(project, projectIndex)
-                var now = new Date
-                detailsModel.insert(0, {
-                                        startTime: Qt.formatTime(now, "hh:mm"),
-                                        endTime: "",
-                                        elapsed: "",
-                                        date: Qt.formatDate(now, "dddd, MMMM dd yyyy"),
-                                        recordId: recordId,
-                                        comments: ""
-                                    })
-            }
-        }
-
-        Button {
-            id: stopButton
-            style: NegativeButtonStyle {}
-            text: qsTr("Stop")
-            width: startButton.width
-            visible: project === inProgress
-            anchors.centerIn: startButton
-            onClicked: {
-                appWindow.stopCurrentProject()
-                detailsModel.setProperty(0, "endTime", Qt.formatDateTime(new Date, "hh:mm"))
-                detailsModel.setProperty(0, "elapsed", Utils.toTime(workTimer.elapsed))
-                mainPage.update()
-            }
-        }
-*/
-
     }
 
     ContextMenu {
